# tg_binance_bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
requirements/: base.txt  local.txt
src/binance_api_bot/: __init__.py  config.py  log_util.py  main.py  scrape.py  sdk.py  telegram.py  utils.py
src/data/: traders.csv
