[metadata]
name = binance_api_bot
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
line_length = 88
known_first_party = binance_api_bot
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[mypy]
python_version = 3.10
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[mypy-*.migrations.*]
ignore_errors = True

[coverage:run]
include = binance_api_bot/*
omit = *migrations*, *tests*
